# Cpractise

./: .gitignore  CMakeLists.txt  fork_test.c  linked_list.c  linked_list.h  main.c  main.cpp  oscode.c  sleep.c  wait_for_input.c  write.c.c
spooler/: CMakeLists.txt  Makefile  client  client.c  info.h  info.h.gch  server  server.c  typescript
